--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -7,14 +7,16 @@
 .about__photo-wrapper {
   width: 416px;
   height: 416px;
-  
 }
 
 .about__photo {
   width: 100%;
   height: 100%;
+  min-width: 416px;
+  min-height: 416px;
   object-fit: cover;
   border-radius: 50%;
+  box-sizing: border-box;
 }
 
 .about__title {
@@ -22,11 +24,14 @@
   font-size: 40px;
   line-height: 1.1;
   color: #1A1B22;
+  margin: 0 0 24px;
 }
 
 .about__info {
+  margin: 0;
   font-family: 'Roboto';
   font-size: 18px;
   line-height: 1.3;
   color: #1A1B22;
+  box-sizing: border-box;
 }
