media queries for header and about section

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,10 @@
 .header {
   background: url(../../images/background.png) no-repeat;
-  background-size: 100%;
+  background-size: cover;
+}
+
+@media screen and (max-width: 600px) {
+  .header {
+    background-position: center center;
+  }
 }
