--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -7,6 +7,7 @@
 .about__photo-wrapper {
   width: 416px;
   height: 416px;
+  align-self: center;
 }
 
 .about__photo {
@@ -34,4 +35,84 @@
   line-height: 1.3;
   color: #1A1B22;
   box-sizing: border-box;
+}
+
+@media screen and (max-width: 1200px) {
+  .about {
+    padding-left: 120px;
+  }
+
+  .about__photo-wrapper {
+    width: 300px;
+    height: 300px;
+  }
+
+  .about__photo {
+    min-width: 300px;
+    min-height: 300px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .about {
+    padding-left: 80px;
+    column-gap: 32px;
+  }
+
+  .about__photo-wrapper {
+    width: 250px;
+    height: 250px;
+    
+  }
+
+  .about__photo {
+    min-width: 250px;
+    min-height: 250px;
+    
+  }
+
+  .about__title {
+    font-size: 30px;
+  }
+}
+
+/* Tablets */
+@media screen and (max-width: 768px) {
+  .about {
+    padding: 40px 40px 61px;
+    column-gap: 32px;
+  }
+
+  .about__photo-wrapper {
+    width: 232px;
+    height: 232px;
+  }
+
+  .about__photo {
+    min-width: 232px;
+    min-height: 232px;
+  }
+}
+
+/* Phones */
+@media screen and (max-width: 600px) {
+  .about {
+    padding: 32px 16px 128px;
+    flex-direction: column;
+    row-gap: 24px;
+  }
+
+  .about__photo-wrapper {
+    width: 272px;
+    height: 272px;
+  }
+
+  .about__photo {
+    min-width: 272px;
+    min-height: 272px;
+  }
+
+  .about__title {
+    margin-bottom: 16px;
+  }
 }
