--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -130,6 +130,14 @@
   font-size: 16px;
   line-height: 1.3;
   color: #1A1B22;
+  /* height: 120px; */
+  -webkit-line-clamp: 5;
+  display: -webkit-box;
+  
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  /* overflow: hidden;
+  text-overflow: ellipsis; */
 }
 
 .card__source {
