--- a/src/components/FormSection/FormSection.css
+++ b/src/components/FormSection/FormSection.css
@@ -19,3 +19,34 @@
   max-width: 608px;
   margin: 32px auto 0;
 }
+
+@media screen and (max-width: 768px) {
+  .form-section {
+    padding: 38px 0 48px 160px ;
+  }
+
+  .form-section__title {
+    font-size: 36px;
+    max-width: 452px;
+    margin: 0;
+  }
+
+  .form-section__subtitle {
+    margin-top: 16px;
+    max-width: 452px;
+    margin: 16px 0 0;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .form-section {
+    padding-left: 100px;
+  }
+  
+}
+
+@media screen and (max-width: 600px) {
+  .form-section {
+    padding: 30px 16px 32px 19px;
+  }
+}
