--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -76,5 +76,19 @@
   cursor: pointer;
   display: flex;
   column-gap: 15px;
+}
 
+@media screen and (max-width: 768px) {
+  .navigation {
+    padding: 22px 12px 40px 40px;
+  }
+
+  .navigation__link {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+
+  .navigation__header-button {
+    padding: 8px 12px;
+  }
 }
