--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,10 +1,9 @@
 .search-form {
-  margin: 0 auto;
+  margin: 88px auto 0;
   max-width: 608px;
   display: flex;
   position: relative;
   align-items: center;
-  margin-top: 88px;
 }
 
 .search-form__input {
@@ -40,4 +39,47 @@
 
 .search-form__submit-button:hover {
   background-color: #347EFF;
+}
+
+@media screen and (max-width: 768px) {
+  .search-form {
+    max-width: 400px;
+    margin: 48px 0 0;
+    /* align-items: left; */
+  }
+}
+
+/* @media screen and (max-width: 500px) {
+  .search-form {
+    max-width: 87%;
+  }
+
+  .search-form__submit-button {
+    max-width: 40%;
+  }
+} */
+
+@media screen and (max-width: 500px) {
+  .search-form {
+    width: 288px;
+    flex-direction: column;
+    align-items: center;
+    margin: 122px auto 0;
+    row-gap: 16px;
+  }
+
+  .search-form__input {
+    /* max-width: 88%; */
+    width: calc(100% - 32px);
+    margin: 0 auto;
+    padding: 17px 16px;
+  }
+
+  .search-form__submit-button {
+    position: static;
+    width: 100%;
+    /* width: 100%; */
+    margin: 0 auto;
+    padding: 16px auto;
+  }
 }
