feat: media queries for footer

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -21,17 +21,74 @@
 .footer__links {
   display: flex;
   column-gap: 35px;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .footer__link {
   text-decoration: none;
   color: #1A1B22;
+  /* align-self: center; */
 }
 
 .footer__external-resources {
   display: flex;
   column-gap: 24px;
   align-items: center;
+}
+
+@media screen and (max-width: 900px) {
+  .footer {
+    padding: 24px 20px 18px 40px;
+  }
+
+  .footer__navigation {
+    column-gap: 24px;
+  }
+
+  .footer__links {
+    column-gap: 24px;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .footer {
+    display: grid;
+    grid-template-areas: 
+      "navigation"
+      "copyright";
+    justify-content: center;
+    row-gap: 38px;
+    padding: 20px 16px;
+  }
+
+  .footer__copyright {
+    margin: 0 auto;
+    grid-area: copyright;
+  }
+
+  .footer__navigation {
+    grid-area: navigation;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .footer__navigation {
+    justify-content: space-between;
+  }
+
+  .footer__links {
+    flex-direction: column;
+    row-gap: 33px;
+  }
+
+  .footer__external-resources {
+    align-items: flex-start;
+  }
+}
+
+@media screen and (max-width: 319px) {
+  .footer__copyright {
+    font-size: 14px;
+  }
 }
 
