--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -66,7 +66,8 @@
 
   .cardlist__list {
     grid-template-columns: 1fr;
-    margin-top: 58px;
+    grid-auto-rows: minmax(440px, auto);
+    /* margin-top: 58px; */
   }
 
   .cardlist__show-more-button {
@@ -76,5 +77,6 @@
 
   .cardlist__title {
     font-size: 30px;
+    margin-bottom: 58px;
   }
 }
