--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -28,3 +28,14 @@
   font-weight: 700;
 }
 
+@media screen and (max-width: 768px) {
+  .saved-header__info {
+    padding: 24px 0 32px 40px;
+  }
+
+  .saved-header__title {
+    font-size: 30px;
+    max-width: 336px;
+  }
+}
+
