--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -111,6 +111,7 @@
 @media screen and (max-width: 600px) {
   .navigation {
     padding: 16px 16px 16px 0;
+    position: relative;
   }
 
   .navigation__burger {
