--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,5 @@
 .card {
-  /* min-height: 576px; */
   max-height: 100%;
-  
   max-width: 100%;
   cursor: pointer;
   position: relative;
@@ -103,9 +101,7 @@
   padding: 20px 24px 24px;
   min-height: 304px;
   position: relative;
-  /* text-overflow: ellipsis; */
-  /* white-space: nowrap; */
-  /* overflow: hidden; */
+  
 }
 
 .card__date {
@@ -130,14 +126,10 @@
   font-size: 16px;
   line-height: 1.3;
   color: #1A1B22;
-  /* height: 120px; */
   -webkit-line-clamp: 5;
   display: -webkit-box;
-  
   -webkit-box-orient: vertical;
   overflow: hidden;
-  /* overflow: hidden;
-  text-overflow: ellipsis; */
 }
 
 .card__source {
@@ -152,6 +144,11 @@
   position: absolute;
   left: 24px;
   bottom: 24px;
+  width: 300px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  
 }
 
 @media screen and (max-width: 992px) {
@@ -165,6 +162,10 @@
 
   .card__title {
     font-size: 22px;
+  }
+
+  .card__source {
+    width: 140px;
   }
 }
 
@@ -181,6 +182,16 @@
 
   .card__image {
     max-height: 196px;
+  }
+
+  .card__source {
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 385px) {
+  .card__source {
+    width: 200px;
   }
 }
 
