--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,7 +1,7 @@
 .about {
-  padding: 80px 104px 80px 216px;
   display: flex;
   column-gap: 58px;
+  padding: 80px calc(104px + ((100% - 1440px) / 2)) 80px calc(216px + ((100% - 1440px) / 2));
 }
 
 .about__photo-wrapper {
@@ -21,7 +21,7 @@
 }
 
 .about__title {
-  font-family: 'Roboto Slab';
+  font-family: 'Roboto Slab', serif;
   font-size: 40px;
   line-height: 1.1;
   color: #1A1B22;
@@ -29,8 +29,14 @@
 }
 
 .about__info {
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+}
+
+.about__paragraph {
   margin: 0;
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   line-height: 1.3;
   color: #1A1B22;
