--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
-  padding: 32px 104px 26px;
   display: flex;
   justify-content: space-between;
+  padding: 32px calc(104px + ((100% - 1440px) / 2)) 26px;
 }
 
 .footer__copyright {
@@ -26,6 +26,7 @@
 .footer__link {
   text-decoration: none;
   color: #1A1B22;
+  font-weight: 400;
 }
 
 .footer__external-resources {
