--- a/src/components/FormSection/FormSection.css
+++ b/src/components/FormSection/FormSection.css
@@ -4,8 +4,9 @@
 
 .form-section__title {
   color: #fff;
-  font-family: 'Roboto Slab';
+  font-family: 'Roboto Slab', serif;
   font-size: 60px;
+  font-weight: 400;
   line-height: 1.1;
   max-width: 608px;
   margin: 0 auto;
@@ -13,7 +14,7 @@
 
 .form-section__subtitle {
   color: #fff;
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   line-height: 1.3;
   max-width: 608px;
