--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -7,7 +7,7 @@
   margin: 24px 0 0;
   text-align: center;
   color: #B6BCBF;
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   line-height: 1.3;
 }
