--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -1,3 +1,7 @@
+.saved-header {
+  padding: 0 calc((100% - 1440px) / 2) 0;
+}
+
 .saved-header__info {
   padding: 40px 0 56px 104px;
 }
@@ -10,7 +14,7 @@
 }
 
 .saved-header__title {
-  font-family: 'Roboto Slab';
+  font-family: 'Roboto Slab', serif;
   font-size: 40px;
   line-height: 1.15;
   color: #1A1B22;
@@ -18,7 +22,7 @@
 }
 
 .saved-header__keywords-block {
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   line-height: 1.3;
   color: #1A1B22;
@@ -36,6 +40,12 @@
   .saved-header__title {
     font-size: 30px;
     max-width: 336px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .saved-header__info {
+    padding-left: 16px;
   }
 }
 
