--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -12,7 +12,7 @@
   padding: 21px 0px 20px 21px;
   width: 100%;
   font-size: 16px;
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   line-height: 1.3;
   outline: none;
 }
@@ -28,7 +28,7 @@
   color: #fff;
   padding: 20px 56px;
   font-size: 18px;
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   line-height: 1.3;
   position: absolute;
@@ -39,6 +39,10 @@
 
 .search-form__submit-button:hover {
   background-color: #347EFF;
+}
+
+.search-form__submit-button:active {
+  background-color: #2A65CC;
 }
 
 @media screen and (max-width: 768px) {
