--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -26,7 +26,7 @@
 .footer__link {
   text-decoration: none;
   color: #1A1B22;
-  font-weight: 400;
+  font-family: 'Roboto', sans-serif;
 }
 
 .footer__external-resources {
