feat: card sign in label doesnt appear when user logged in, redirecting to an article by clicking on the card

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -5,6 +5,12 @@
   position: relative;
 }
 
+.card__link {
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+
 .card__image {
   border-radius: 10px 10px 0 0;
   display: block;
