feat: show more button action

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -103,6 +103,7 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 1.2;
+  color: #000;
 }
 
 .card__description {
@@ -128,6 +129,10 @@
   font-size: 26px;
   line-height: 1.1;
   color: #1A1B22;
+  -webkit-line-clamp: 3;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .card__text {
