feat: make show more button hidden when all the articles are open

--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -41,6 +41,10 @@
   cursor: pointer;
 }
 
+.cardlist__show-more-button_hidden {
+  visibility: hidden;
+}
+
 /* HOVER EFFECT FOR BUTTON ACCORDING FIGMA LAYOUT */
 .cardlist__show-more-button:hover {
   opacity: 0.9;
