feat: click on active save button delete the card

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -39,7 +39,12 @@
   background-color: #FFFFFF;
 }
 
-.card__button_type_save:hover {
+/* .card__button_type_save:hover {
+  background: url('../../images/bookmark_hover.svg') no-repeat center;
+  background-color: #FFFFFF;
+} */
+
+.card__button_type_hover {
   background: url('../../images/bookmark_hover.svg') no-repeat center;
   background-color: #FFFFFF;
 }
