fix: unique id for cards add, cards layout fixed

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -122,3 +122,18 @@
     margin-bottom: 16px;
   }
 }
+
+@media screen and (max-width: 319px) {
+  .about__photo-wrapper {
+    /* width: 200px;
+    height: 200px; */
+    max-width: 200px;
+    max-height: 200px;
+    /* max-height: 90%; */
+  }
+
+  .about__photo {
+    min-width: 100%;
+    min-height: 100%;
+  }
+}
