--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -54,7 +54,7 @@
 
 @media screen and (max-width: 500px) {
   .search-form {
-    width: 288px;
+    width: 98%;
     flex-direction: column;
     align-items: center;
     margin: 122px auto 0;
@@ -72,11 +72,5 @@
     width: 100%;
     margin: 0 auto;
     padding: 16px auto;
-  }
-}
-
-@media screen and (max-width: 319px) {
-  .search-form {
-    max-width: 95%;
   }
 }
